--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "argon2": "^0.28.7",
+    "zod": "^3.18.0"
   }
 }
